# PROJECTCHIMERA

./: .env.example  .gitignore  .vscode  AzuriteConfig  README.md  dev-requirements.txt  main.py  pyproject.toml  requirements.txt  test_intel_agg.py
AGENTS/: __init__.py
AGENTS/ALPHA_AGENT/: alpha_agent.py  black_swan_shield.py  genetic_algorithm_engine.py  test_import.py  test_import_final.py
AGENTS/EXECUTION_AGENT/: execution_agent.py
AGENTS/PERCEPTION_AGENT/: perception_agent.py
AGENTS/RISK_MANAGEMENT_AGENT/: risk_management_agent.py
AI_BRAIN/: data_synthesizer.py  llm_router.py
AI_BRAIN/model_wrappers/: gemini_wrapper.py  openrouter_wrapper.py
ANALYTICS_CORE/: crypto_ecosystem_scanner.py  quantum_sentient_analyzer.py
COLLECTIVE_MEMORY/: gdrive_synchronizer.py  vector_store.py
COLLECTIVE_MEMORY/COLLECTIVE_MEMORY/: database_models.py
COLLECTIVE_MEMORY/vector_db/: chroma.sqlite3
CONFIG/: scraping_targets.toml
CONFIG/CONFIG/: chimera_config.toml
CONTROL_PANEL/: api_manager.py
CONTROL_PANEL/CONFIG/: chimera_config.toml  risk_profile.toml
CONTROL_PANEL/DASHBOARD/: app.py
CONTROL_PANEL/SCRIPTS/: deploy.ps1
EXECUTION_SYSTEM/: adaptive_risk_manager.py  execution_system.py
GLOBAL_ANALYZER/: sentiment_analyzer.py
NEURAL_NETWORK/: main.py  requirements.txt
PERCEPTION_SYSTEM/: perception_system.py
SENTIENT_CORE/: chimera_orchestrator.py  cognitive_loop.py
STRATEGIC_CORTEX/: hybrid_fusion_engine.py  strategic_cortex.py
UTILS/: singleton.py
WEB_SCRAPERS/: intelligent_scraper.py  social_media_scraper.py
(+43 files in other folders)
